mssql/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mssql
  annotations:
    argocd.argoproj.io/sync-wave: "-10"
    openshift.io/sa.scc.supplemental-groups: 1000440000
spec:
  finalizers:
  - kubernetes
